--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@mercadopago/sdk-js": "^0.0.3",
-    "firebase": "^12.8.0"
+    "firebase": "^12.8.0",
+    "mercadopago": "^2.0.0"
   }
 }
